Updated power testing

--- a/testing/power-testing.tex
+++ b/testing/power-testing.tex
@@ -1,2 +1,5 @@
 \subsection{Power Subsystem Testing}
 \label{sec:power_subsystem_testing}
+The Power subsystem is an important part in making sure that the whole system is fully operational. With various components such as the microcontroller, sensors, mechanical components and more, we need to make sure that each component is operating properly. This is a confirmation that the whole system is operating but also a test to see which parts work best with each other and what works best under given situations. One thing that will be tested is the voltage regulators to see which of the selected voltage regulators is most efficient and regulate power the best see fit.	\par
+\subsubsection{Voltage Regulator}
+Providing power is a very important part to operating a system, but providing the right amount of power is key to make sure all the components are operating properly. As said in section 3 in the Power Subsystem, the LM317 (linear) and the LM2576 (switching) were selected to be tested and compared to see which would be the most efficient in regulating voltage. In this test, a simple circuit will be built with a battery, capacitors and the voltage regulator. The output voltage will be measured and displayed on an oscilloscope to verify which of the voltage regulators were able to regulate voltage more efficiently and successfully. \par 
