--- a/testing/mcu-testing.tex
+++ b/testing/mcu-testing.tex
@@ -16,8 +16,8 @@ of -0.5 to 3.8 V into V\textsubscript{BAT}, -0.5 to 4.3 V into any digital
 IO-configured pin, -0.5 to 2.1 V into any RF-configured pin, and -0.5 to 2.1 V
 into any analog-configured pin without damage. The system shall be able to
 accept a current of 0 to 620 mA into any pin without damage. The system shall
-be able to regulate voltage going into V\textsubscript{BAT}, and provide 3.3 V
-(between 3.0 and 3.6 V) on its 3V3 rail to any components in the sensing
+be able to regulate voltage going into V\textsubscript{BAT}, and provide 3.3 $\pm$ 0.3 V
+on its 3V3 rail to any components in the sensing
 subsystem that may require it.
 
 \paragraph{Operating Temperature} The system shall be able to operate
@@ -80,28 +80,10 @@ function nominally if used for communication with any other modules in the
 overall garden bed system.
 
 \paragraph{Onboard LEDs} The system shall be able to make use of its onboard
-LEDs for notifying the user or developers of system states. 
-When the system is in active mode, the green LED shall be solidly illuminated.
-When the system is in low power mode, the green LED shall flash 1 time for a
-period of 0.5 seconds, every 2 seconds. When the system is in critical power
-mode, the red LED shall flash 2 times for a period of 0.5 seconds per flash,
-seperated by 1 second between each flash, every 30 seconds. When the system is
-in shutdown mode, no LEDs shall be active. When the system is starting up, the
-green and red LED shall be solidly illuminated until the startup sequence is
-completed and the system transitions into a different power mode. The yellow
-LED shall solidly illuminate while receiving data through the RF antenna for
-the duration of the reception.
-The yellow LED shall blink 1 time every 0.2 seconds for a period of 0.1 second
-while transmitting data through the RF antenna for the duration of the
-transmission.
+LEDs for notifying the user or developers of system states according to the specification in \autoref{sec:controller_subsystem}.
 
 \paragraph{Watchdog Timer} The developers shall be able to initialize the
-watchdog timer. When the watchdog timer reaches zero, the watchdog module
-shall trigger an interrupt. The ISR triggered by the interrupt shall
-reset the watchdog timer. In the case the ISR is not able to be triggered by
-the interrupt (e.g. system freeze), the watchdog module shall reset the system.
-After the system is reset by the watchdog module, it shall start up normally
-(i.e. in a way that does not functionally differ from a regular startup).
+watchdog timer. The watchdog timer shall behave according to the specification in \autoref{sec:controller_subsystem}.
 
 \paragraph{WiFi Module} The WiFi module shall conform to the 802.11b/g/n
 standards. The developers shall be able to configure the WiFi
@@ -109,9 +91,7 @@ module to support 802.11b, 802.11g, or 802.11n in WiFi station mode.  The
 developers shall be able to configure the WiFi module to support 802.11b, or
 802.11g in WiFi Direct mode. The WiFi module shall allow the system to
 connect to either an open WLAN, or a WLAN secured by WPA2 (Personal or
-Enterprise). The MCU shall connect to a WLAN via a hardcoded password (and
-username, if needed), or via SmartConfig. The system shall receive an IPv4
-address via DHCP, or it shall be able to be statically assigned. While
+Enterprise). While
 connected, the WiFi module shall be capable of sending and receiving
 data at speeds of at least 10 kbps at least 80\% of the time.
 
@@ -136,8 +116,7 @@ of $\geq$50 kilosamples per second per channel. The ADC shall support
 conversion on up to 4 channels. The ADC shall support the ablility to timestamp
 samples with the clock mentioned by the technical reference documentation.
 
-\paragraph{Reset Button} The reset button shall be configured, or be
-configurable to "power cycle" the system. The reset button shall not erase
+\paragraph{Reset Button} The reset button shall be able to "power cycle" the system. The reset button shall not erase
 any programming uploaded to the CC3220. The reset button shall not keep the
 system from starting for more than 1 second after the button has been released.
 
@@ -160,11 +139,11 @@ tests related to use of the CC3220 to support application of the product. The
 programming developed and test the below criteria is intended to be the
 product software build.
 
-\paragraph{Startup} Upon startup, the system shall initialize these peripherals in the following order within 30 seconds of startup: watchdog timer, GPIO, ADC, network stack/WiFi module. The system shall then check for interrupts, and execute ISRs if necessary. The system shall then verify its connection to the internet, if set, by attempting to ping \texttt{8.8.8.8} and \texttt{8.8.4.4} 16 at most times over the period of 8 seconds. If 4/16 responses have been received at any point, the system shall attempt to verify network DNS status by pinging \texttt{google.com} 16 at most times over the period of 8 seconds. If 4/16 responses have been received, the system shall continue with startup and clear the no connection flag (if set). If no connection has been established (i.e. the system fails to ping the aforementioned addresses at either step), the system shall set a flag to indicate no connection has been received, and reset. If no connection has been established, and the flag is set, the system shall go into critical power mode and flash the yellow LED for 1 second, 1 time every 2 seconds. The user shall be able to correct the issue via user interface (e.g. SmartConfig or other developed interface). The system shall measure the battery voltage, and set itself to the appropriate state described earlier.
+\paragraph{Startup} The microcontroller shall behave according to the specifications on startup in \autoref{sec:controller_subsystem} during its startup sequence.
 
-\paragraph{Shutdown} The system shall generate an interrupt to shutdown the system. The shutdown ISR shall run and perform the aforementioned actions. The system shall finish any RF transmissions within 5 seconds. The system shall terminate all remaining RF transmissions after the 5 second window has elapsed. The system shall save any network parameters to nonvolatile memory to be used upon startup within 1 second. The system shall safely shutdown any initialized peripherals within 5 seconds. The system shall safely shutdown any sensing components within 5 seconds. The system shall "hand-off" any control it had over the power subsystem to the battery's charge controller within 5 seconds. The system shall go into the shutdown power mode, stopping the processor within 1 second.
+\paragraph{Shutdown} The microcontroller shall behave according to the specifications on shutdown in \autoref{sec:controller_subsystem} during its shutdown sequence.
 
-\paragraph{Reset} In the event of a reset state, the system shall perform the shutdown ISR, with each section of the ISR performing its necessary tasks within the allotted time mentioned above. The system shall perform its startup ISR, with each section of the ISR performing its necessary tasks within the allotted time mentioned above. There shall be a time period of no longer than 5 seconds between the end of the shutdown ISR and the beginning of the startup ISR.
+\paragraph{Reset} The microcontroller shall behave according to the specifications on reset in \autoref{sec:controller_subsystem} during its reset sequence.
 
 \paragraph{Networking} The system shall be able to connect to the user's WLAN if it meets the following standards:
 \begin{itemize}
@@ -172,19 +151,16 @@ product software build.
     \item Contains no security or is secured with WPA2 (Personal or Enterprise)
     \item $\geq$-70 dBm signal strength
     \item Adheres to the standards of 802.11b, g, or n
+    \item DHCP or statically-assigned IPv4 addressing
+    \item Uses NAT and does not expose system to WAN
+    \item Provides DNS to LAN devices
+    \item Able to resolve and successfully connect to \texttt{8.8.8.8} and \texttt{google.com} within 5 seconds
 \end{itemize}
-The system shall received an IPv4 address assigned by network DHCP, or the user shall be able to statically assign a local IPv4 address. The network shall use NAT, and not expose the product to the WAN. The system shall use DNS provided by the WLAN gateway. The system shall be able to connect to the internet within the timeframe described by the startup sequence. The system shall be ready to establish a connection to AWS within 5 seconds of verifying connection to the internet.
 
-\paragraph{AWS} The system shall first establish a connection to AWS by sending a burst of 5 data packets of the size and containing the variables  described in \autoref{toweb_encoding}. over a period of 25 seconds. If no connection is established over a period of 15 minutes, the system shall send the same burst of data packets and repeat every 15 minutes until a connection is established.
+\paragraph{AWS} The microcontroller shall behave according to the specifications on connecting to and communicating with AWS in \autoref{sec:controller_subsystem}.
 
-\paragraph{Receive (Sockets)} The system shall listen for commands from AWS via TCP sockets. If no traffic is received from AWS within a period of 40 minutes, the system shall terminate and attempt to reopen the socket. The system must be able to open and configure a socket within 30 seconds.
+\paragraph{Sockets} The microcontroller shall behave according to the specifications on sockets in \autoref{sec:controller_subsystem}.
 
-\paragraph{Send (Sockets)} The system shall send data to AWS via TCP sockets. If no traffic is successfully sent to AWS within a period of 40 minutes, the system shall terminate and attempt to reopen the socket. The system must be able to open and configure a socket within 30 seconds.
-
-\paragraph{Receive (Command)} While a connection is established with AWS, the system shall continually listen for commands from AWS. The system shall be able to fully receive and decode commands from AWS within 10 seconds of the start of the reception. The system shall be allotted 1 second per command to schedule the received commands.
-
-\paragraph{Send (Data)} While a connection is currently established with AWS, the system shall send a burst of 2 data packets over a period of 10 seconds every 15 minutes. The data packets shall be of the size and contain the variables described in \autoref{toweb_encoding}.
-
-\paragraph{Solar and Battery} The system shall monitor and update the solar array current and voltage output values at least every 10 seconds. The system shall run in active mode between sunrise and sunset, while the battery has 40-100\% calculated charge remaining. The system shall run in low power mode between sunrise and sunset while the battery has 10-40\% calculated charge remaining, and between sunset and sunrise while the battery has 10-100\% calculated charge remaining. The system shall run in critical power mode while the battery has 5-10\% calculated charge remaining. The system shall be in shutdown mode while the battery has 0-5\% calculated charge remaining. The system shall be able to switch power modes within 5 seconds of the interrupt being triggered.
+\paragraph{Solar and Battery} The system shall monitor and update the solar array current and voltage output values at least every 10 seconds. The system shall behave according to the specifications on power modes and battery percentages in \autoref{sec:controller_subsystem}.
 
 \paragraph{Sensing} The system shall monitor and perform analog-to-digital conversion on the spectroscopic sensor values at least every 10 seconds while not in shutdown or critical power mode.
