added specialty to title page

--- a/Title.tex
+++ b/Title.tex
@@ -6,10 +6,10 @@
             \vspace{.5cm}
         \end{Large}
         \begin{large}
-            Nicholas Chitty \\
-            Brendan College \\
-            Scott Peirce \\
-            Justin Pham-Trinh \\
+            Nicholas Chitty - Electrical Engineer\\
+            Brendan College - Computer Engineer\\
+            Scott Peirce - Optical Engineer\\
+            Justin Pham-Trinh - Electrical Engineer \\
         \end{large}
         \vfill
         UCF Senior Design Fall 2022 - Spring 2023
