added labels for ps sections

--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -1,6 +1,6 @@
 \subsection{Part Selection}
 In our research for part selection we wanted to create a generalized comparison of the options we have available. We formatted this information in the tables below.
-\subsubsection{Controller Subsystem}
+\subsubsection{Controller Subsystem}\label{sec:ps-control}
 At minimum, any chosen microcontrollers (MCUs) shall support natively, or by addition of a
 module, these features and traits:
 \begin{itemize}
@@ -118,7 +118,7 @@ and the B-L4S5I-IOT01A considered because of its abundant peripherals, but both 
 out to the Texas Instruments products.
 % End Controller Subsystem
 
-\subsubsection{Power Subsystem}
+\subsubsection{Power Subsystem}\label{sec:ps-power}
 \paragraph{Power Supply}
 The power system is a key factor to this model and trying to make this an independent system. This is key because this power system needs to be able to power all of the many different components, while also charging itself when not operating.
 
