--- a/research/technology.tex
+++ b/research/technology.tex
@@ -6,7 +6,7 @@ TBD, DESCRIPTION NEEDED HERE.
 
 Ocean Insight is a local manufacturer of high-end, low size, weight, and power spectrometers. The ST NIR Microspectrometer is about 40 cubic centimeters in volume with a scan speed of 10ms, a signal to noise ratio of 190:1, and a spectral resolution of 2.2nm. Its spectral range is from 645nm to 1085nm, and it was specifically designed to be integrated into larger systems for customers who were interested in a flexible, low-cost design. Added to that, the system is rugged, and offers a variable slit input size, increasing its flexibility even further. While the designs are proprietary, this system serves as a benchmark for what can be achieved by the industry, and no doubt there are major design changes that can be made to achieve a similar result for the application intended for the Auto Garden Bed. That being said, the selling price for one is \textdollar1,750.
 \begin{figure}[H]
-    \caption{NIR Photodiode Spectral Sensitivity}
+    \caption{Ocean ST NIR Microspectrometer}
     \centering
     \includegraphics[width=\textwidth]{images/3-2-1Pic.png}
 \end{figure}
@@ -14,7 +14,7 @@ Ocean Insight is a local manufacturer of high-end, low size, weight, and power s
 
 AgroCares offers a Near Infrared Spectrometer specifically designed for Proximity Soil Sensing. Its spectral range is from 1300 to 2500nm and it uses Micro Electrical Mechanical Systems or MEMS to capture EM Waves reflecting off the soil. The real value of the product is in its wireless communications system. The device uses Bluetooth 4.0 to send data to a cloud data center. There, spectrographs of large data sets of soil with known nutrient contents are compared with the reading, cutting out the need for on-sight calibration. The system is handheld and uses eight tungsten halogen bulbs to blast the soil with energy. This light is collected in an extremely small area, sampling 65 squared millimeters. It would be worth researching to see if the Tungsten bulbs were linked to the 1300 to 2500nm spectral range or if another probe and sensor would suffice.
 \begin{figure}[H]
-    \caption{NIR Photodiode Spectral Sensitivity}
+    \caption{AgroCares Nutrient Soil Scanner}
     \centering
     \includegraphics[width=\textwidth]{images/3-2-2Pic.png}
 \end{figure}
